2008-07-02  Bernhard Walle <bernhard.walle@gmx.de>

	* check if the parallel port is TRISTATE capable (after debugging two
	  days why the schematics does not work ...)

2008-01-06  Bernhard Walle <bernhard.walle@gmx.de>

	* triggering is enabled when the mask is not 0x00 and not when it is not
	  0xff as previously implemented
	  [discovered by Helmut Jakob]

2008-02-03  Bernhard Walle <bernhard.walle@gmx.de>

	* fix wrong "Stop" label (accidentally named was "Start")
	  [reported by Dr.-Ing. A. Irmer]

2007-12-15  Bernhard Walle <bernhard.walle@gmx.de>

	* fix build for gcc 4.3

2007-09-21  Bernhard Walle <bernhard.walle@gmx.de>

	* adapt documentation to udev and add the links to the openSUSE
	  BuildService

2007-09-18  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented saving only the changed positions (suggested by Philippe
	  Langlois)

2007-09-17  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented CSV export option (suggested by Philippe Langlois)

2005-06-29  Bernhard Walle <bernhard.walle@gmx.de>

	* Added Windows documentation (thanks to Stefan Holzer)
	* Released 0.1.2.

2005-06-18  Bernhard Walle <bernhard.walle@gmx.de>

	* make ParportList a singleton object, so ieee1284_find_ports
	  is only called once, this doesn't reset other parallel ports
	  (that are currently unsued) at each measure which is
	  useful if you have avrdude and keep it connected with the
	  schematic

2005-06-17  Bernhard Walle <bernhard.walle@gmx.de>

	* Changed documentation to use Qt Assistant on all plattforms
	* Removed browser settings
	* Added assistant profile

2005-06-15  Bernhard Walle <bernhard.walle@gmx.de>

	* Bugfix: ZoomFit sets now the start index to 0

2005-06-14  Bernhard Walle <bernhard.walle@gmx.de>

	* Added schematic in Eagle format to both documentation paths
	* Added schematic to the share/tfla-01/ path
	* Critial bugfix: DataPlot::getNumberOfPossiblyDisplayedSamples()
	  always returned 0
	* Completed documentation
	* Released 0.1.1.
